@@ -1,5 +1,13 @@
 2011-09-01  Bruno Haible  <bruno@clisp.org>
 
+	strtoimax: Avoid link error on OSF/1 with DTK cc.
+	* m4/strtoimax.m4 (gl_FUNC_STRTOIMAX): Always test whether strtoimax is
+	defined as a function.
+	* modules/strtoimax (Depends-on, configure.ac): Test only whether
+	strtoimax is defined, not whether it is declared.
+
+2011-09-01  Bruno Haible  <bruno@clisp.org>
+
 	imaxdiv: Avoid link error on OSF/1 with DTK cc.
 	* m4/imaxdiv.m4 (gl_FUNC_IMAXDIV): Also test whether imaxdiv is defined
 	as a function.
